# Clay-OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: clay_gl.cpp  clay_gl.h  example.cpp  gl_util.cpp  gl_util.h  impl.cpp  rect.h  text.cpp  text.h
src/shaders/: rect.frag  rect.vert  text.frag  text.vert
